--- a/trunk/ ttdc --username trevisthomas/River/war/css/dark.css
+++ b/trunk/ ttdc --username trevisthomas/River/war/css/dark.css
@@ -14,6 +14,7 @@ body{ color: #ccc; background-color: black;}
 textarea,
 input{ color: #eee; background-color: black;}
 
+.tt-post-container-header a,
 .tt-post-fetch-more a,
 .tt-paginator-nano a,
 .tt-paginator a,
@@ -31,6 +32,7 @@ input{ color: #eee; background-color: black;}
 .tt-post-summary a,
 .tt-post-expanded-content a{text-decoration: none; color: #ccc;}
 	
+.tt-post-container-header a:link,
 .tt-post-fetch-more a:link,	
 .tt-paginator-nano a:link,
 .tt-paginator a:link,
@@ -48,6 +50,7 @@ input{ color: #eee; background-color: black;}
 .tt-post-summary a:link,
 .tt-post-expanded-content a:link {text-decoration: none; color: #ccc;}
 
+.tt-post-container-header a:visited,
 .tt-post-fetch-more a:visited,
 .tt-paginator-nano a:visited,
 .tt-paginator a:visited,
@@ -65,6 +68,7 @@ input{ color: #eee; background-color: black;}
 .tt-post-summary a:visited,
 .tt-post-expanded-content a:visited {text-decoration: none; color: #ccc;}
 
+.tt-post-container-header a:hover,
 .tt-post-fetch-more a:hover,
 .tt-paginator-nano a:hover,
 .tt-paginator a:hover,
@@ -82,6 +86,7 @@ input{ color: #eee; background-color: black;}
 .tt-post-summary a:hover,
 .tt-post-expanded-content a:hover  {text-decoration: underline; color: white;}
 
+.tt-post-container-header a:active,
 .tt-post-fetch-more a:active,
 .tt-paginator-nano a:active,
 .tt-paginator a:active,
