--- a/ ttdc --username trevisthomas/River/war/css/light.css
+++ b/ ttdc --username trevisthomas/River/war/css/light.css
@@ -13,6 +13,7 @@ body{ color: #222; background-color: #eee;}
 
 .tt-message-textbox-disabled{ color: #ddd;}
 
+.tt-post-container-header a,
 .tt-post-fetch-more a,	
 .tt-paginator-nano a,
 .tt-paginator a,
@@ -30,6 +31,7 @@ body{ color: #222; background-color: #eee;}
 .tt-post-summary a,
 .tt-post-expanded-content a{text-decoration: none; color: #113aa4;}
 	
+.tt-post-container-header a:link,
 .tt-post-fetch-more a:link,		
 .tt-paginator-nano a:link,
 .tt-paginator a:link,
@@ -47,6 +49,7 @@ body{ color: #222; background-color: #eee;}
 .tt-post-summary a:link,
 .tt-post-expanded-content a:link {text-decoration: none; color: #113aa4;}
 
+.tt-post-container-header a:visited,
 .tt-post-fetch-more a:visited,	
 .tt-paginator-nano a:visited,
 .tt-paginator a:visited,
@@ -64,6 +67,7 @@ body{ color: #222; background-color: #eee;}
 .tt-post-summary a:visited,
 .tt-post-expanded-content a:visited {text-decoration: none; color: #113aa4;}
 
+.tt-post-container-header a:hover,
 .tt-post-fetch-more a:hover,	
 .tt-paginator-nano a:hover,
 .tt-paginator a:hover,
@@ -81,6 +85,7 @@ body{ color: #222; background-color: #eee;}
 .tt-post-summary a:hover,
 .tt-post-expanded-content a:hover  {text-decoration: underline; color: blue;}
 
+.tt-post-container-header a:active,
 .tt-post-fetch-more a:active,	
 .tt-paginator-nano a:active,
 .tt-paginator a:active,
