--- a/ ttdc --username trevisthomas/River/war/css/light.css
+++ b/ ttdc --username trevisthomas/River/war/css/light.css
@@ -318,6 +318,7 @@ body{ color: #222; background-color: #eee;}
 
 .tt-post-child-noHover{border-color: #f5f5f5;}
 .tt-post-child-hover{border-color: #4b75e1;}
+.tt-post-child{background-color: white;}
 
 .tt-selected{border-color:#113aa4; background-color:#b0c4de;}
 
@@ -329,4 +330,8 @@ body{ color: #222; background-color: #eee;}
 
 .spoiler{ color : #efefef; background-color : #efefef;}
 .reveal{ color : #000; background-color : #efefef;}
+
+.tt-post-unread{border-color: #b6c5f5; }
+.tt-post-unread{border-width: 1px 0; border-style: solid; margin: 2px 0;}
+.tt-post-unread-avatar{background: #d6ddf4;}
 
