--- a/ ttdc --username trevisthomas/River/war/css/structure.css
+++ b/ ttdc --username trevisthomas/River/war/css/structure.css
@@ -449,3 +449,5 @@ side effects in non mozilla browsers in the comment creator
 .tt-rating-voteMode{ width: 250px;}
 .tt-rating-displayMode{ display:inline;}
 
+.tt-hidden{display:none;}
+
